@@ -7,6 +7,7 @@ Stable versions
 	- fix note end detection in IT sample mode
 	- fix IT envelope handling with carry and fadeout
 	- fix IT tone portamento with sample changes
+	- fix IT initial global volume setting
 	Other changes:
 	- fix IT random volume variation
 	- fix pattern initialization sanity check
